<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2" android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="95dp" app:srcCompat="@drawable/movieicon"
            android:id="@+id/imageView"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/textView5"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/title" android:textSize="24sp"/>
    <TextView
            android:text="@string/overView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/overView" android:textSize="24sp"/>
    <TextView
            android:text="@string/lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView9"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/langView" android:textSize="24sp"/>
    <TextView
            android:text="@string/release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView11"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/releaseView" android:textSize="24sp"/>
    <TextView
            android:text="@string/kid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView13"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/suitable" android:textSize="24sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="Rate Movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/movieRate"/>
        <Button
                android:text="Add movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/addMovieButton"/>

    </LinearLayout>
</LinearLayout>